--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,25 @@
 body {
+  margin: 0;
   padding: 0;
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
-  margin: 0;
+  position: relative;
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+a{
+    text-decoration: none;
+    color:black;
+}
+
+.active *{
+  color:'blue';
+  font-weight: bold;
 }
 
 code {
